@@ -1,3 +1,6 @@
+AP-2007-11-08-0: Correction of AP-2007-10-31-0 - ARCo doesn't support tablespaces
+                 for Postgresql database.
+
 AP-2007-11-07-2: Bugfix:      Correction of commit AP-2007-11-06-2
 
 AP-2007-11-07-1: Bugfix:      Changing default tablespace for Oracle to USERS
